fixe overflow hiden

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,9 @@ html {
     scroll-behavior: smooth;
 }
 
-
+section {
+    overflow: hidden;
+}
 
 :root {
     --main-color:#acd147 ;
@@ -1267,9 +1269,7 @@ footer .img-bottom-footer img {
 
   /* responsive home page ------------------------------------------------- */
   @media screen and (max-width: 992px) {
-    .container {
-        overflow: hidden;
-    }
+    
     .nav-header nav a ,
     .nav-header .main-btn {
         font-size: 12px;
